# MachineLearningFundamentalsProject1

./: Makefile  README.md  ann.c  ann.ipynb  pyproject.toml
